--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Výchozí vzhled">
 <!ENTITY Ctr_altoptionsp	"Alternativní vzhled">
 <!ENTITY Ctr_altoptionsw	"Otevřít stránku nastavení v okně">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"Šířka">
 <!ENTITY Ctr_altoptionswh	"Výška">
 <!ENTITY Ctr_altoptionsi	"V simulaci nastavení už není dialogové okno, ale 'okno prohlížeče' s lištami je skryto. Volba 'Použít stávající stránku' přidávající URL stránek, otevřených v současném okně, je dostupná přes 'about:preferences'. Tlačítko 'Možnosti' je nahrazeno novým, aby bylo možné otevírat možnosti v okně.">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Snížit výšku">
 <!ENTITY Ctr_addonbarfs		"V celoobrazovkovém módu (fullscreen)">
 
-<!ENTITY Ctr_tabthrobber	"Defaultní obrázek nahrávání">
+<!ENTITY Ctr_tabthrobber	"Obrázek nahrávání">
 <!ENTITY Ctr_bmanimation	"Animace přidání záložky">
 <!ENTITY Ctr_pananimation	"Animace otevření panelu">
 <!ENTITY Ctr_tabanimation	"Animace zavření/otevření panelu">
