--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Standard udseende">
 <!ENTITY Ctr_altoptionsp	"Alternativt udseende">
 <!ENTITY Ctr_altoptionsw	"Åbn indstillinger-side i et vindue">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"Bredde">
 <!ENTITY Ctr_altoptionswh	"Højde">
 <!ENTITY Ctr_altoptionsi	"Det simulerede indstillinger-vindue er ikke længere en dialog men et 'browservindue' med alle værktøjslinjer skjult. Funktionen 'Anvend nuværende side' tilføjer kun url'er fra sider som er åbne i det nuværende vindue, hvilket i dette tilfælde kun er 'about:preferences'. Værktøjslinjeknappen 'indstillinger' erstattes af en ny en for at kunne åbne indstillinger i et vindue.">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Mindre">
 <!ENTITY Ctr_addonbarfs		"I fuldskærmstilstand">
 
-<!ENTITY Ctr_tabthrobber	"Standard indlæsningsbillede">
+<!ENTITY Ctr_tabthrobber	"Indlæsningsbillede">
 <!ENTITY Ctr_bmanimation	"Animation ved bogmærkning">
 <!ENTITY Ctr_pananimation	"Animation ved åbning af panel">
 <!ENTITY Ctr_tabanimation	"Animation ved lukning/åbning af faneblad">
