--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Standard-Darstellung">
 <!ENTITY Ctr_altoptionsp	"Alternative Darstellung">
 <!ENTITY Ctr_altoptionsw	"Einstellungsseite in einem Fenster öffnen">
+<!ENTITY Ctr_altoptions_hm	"horizontales Menü">
+<!ENTITY Ctr_altoptions_vm	"vertikales Menü">
 <!ENTITY Ctr_altoptionsww	"Breite:">
 <!ENTITY Ctr_altoptionswh	"Höhe:">
 <!ENTITY Ctr_altoptionsi	"Das simulierte Einstellungsfenster ist kein Dialogfenster mehr, sondern ein leistenloses normales Fenster. Die Leistenschaltfläche 'Einstellungen' wird durch 'Einstellungen (Fenster)' ersetzt. Diese Schaltfläche muss einmalig im Modus 'Anpassen' zur Menüleiste hinzugefügt werden.">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Leistenhöhe verringern">
 <!ENTITY Ctr_addonbarfs		"Im 'Vollbildmodus'">
 
-<!ENTITY Ctr_tabthrobber	"Standard-Ladeanzeige">
+<!ENTITY Ctr_tabthrobber	"Ladeanzeige">
 <!ENTITY Ctr_bmanimation	"'Lesezeichen hinzufügen'-Animation">
 <!ENTITY Ctr_pananimation	"'Panel-Aufklappmenü öffnen'-Animation">
 <!ENTITY Ctr_tabanimation	"'Tab schließen und öffnen'-Animation">
@@ -381,7 +383,7 @@
 <!ENTITY Ctr_e_readermode	"Lesemodus">
 <!ENTITY Ctr_e_geolocation	"Standortbestimmung">
 <!ENTITY Ctr_e_pocket		"Pocket">
-<!ENTITY Ctr_e_tabsaudioico	"Audio-Abspiel-Symbol auf Tabs">
+<!ENTITY Ctr_e_tabsaudioico	"Audio-Abspiel-Symbol">
 <!ENTITY Ctr_e_containertab	"'Tab in Umgebung' / 'Kontainer-Tabs'">
 <!ENTITY Ctr_e_findbarhl	"Seitensuchhervorhebung">
 <!ENTITY Ctr_fx50findbarhl	"Das Deaktivieren dieser Optionen entfernt die 'Seitensuchhervorhebung'.">
