--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Standardny wenkowny naglěd">
 <!ENTITY Ctr_altoptionsp	"Alternatiwny wenkowny naglěd">
 <!ENTITY Ctr_altoptionsw	"Bok nastajenjow we woknje wócyniś">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"Šyrokosć">
 <!ENTITY Ctr_altoptionswh	"Wusokosć">
 <!ENTITY Ctr_altoptionsi	"Simulěrowane wokno nastajenjow wěcej njejo dialog, ale 'wobglědowakowe wokno', źož wšykne symbolowe rědki su schowane. Funkcija 'Aktualny bok wužywaś' pśidawa jano URL bokow, kótarež wócynjaju se w aktualnem woknje, kótarež jo w toś tom paźe 'about:preferences'. 'Tłocašk symboloweje rědki Nastajenja' wuměnja se pśez nowy, aby se nastajenja we woknje wócynili.">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Wusokosć pomjeńšyś">
 <!ENTITY Ctr_addonbarfs		"W modusu połneje wobrazowki">
 
-<!ENTITY Ctr_tabthrobber	"Standardny zacytowański wobraz">
+<!ENTITY Ctr_tabthrobber	"Zacytowański wobraz">
 <!ENTITY Ctr_bmanimation	"Animacija za 'Cytańske znamje pśidaś">
 <!ENTITY Ctr_pananimation	"Animacija za wócynjanje póla">
 <!ENTITY Ctr_tabanimation	"Animacija za zacynjanje/wócynjanje rejtarka">
