--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Προεπιλεγμένη εμφάνιση">
 <!ENTITY Ctr_altoptionsp	"Εναλλακτική εμφάνιση">
 <!ENTITY Ctr_altoptionsw	"Άνοιγμα σελίδας επιλογών σε παράθυρο">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"Εύρος:">
 <!ENTITY Ctr_altoptionswh	"Ύψος:">
 <!ENTITY Ctr_altoptionsi	"Το προσομοιωμένο παράθυρο επιλογών δεν είναι πια παράθυρο διαλόγου, αλλά ένα «παράθυρο περιηγητή» με όλες τις εργαλειοθήκες σε απόκρυψη. Το χαρακτηριστικό «Χρήση τρέχουσας σελίδας» προσθέτει μόνο τις διευθύνσεις URL των ανοιγμένων στο τρέχον παράθυρο σελίδων, που είναι μόνο «about:preferences» σε αυτή την περίπτωση. Το κουμπί εργαλειοθήκης «Επιλογές» αντικαθίσταται από ένα νέο, για να είναι δυνατόν το άνοιγμα επιλογών σε παράθυρο.">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Μείωση ύψους">
 <!ENTITY Ctr_addonbarfs		"Εμφάνιση σε προβολή πλήρους οθόνης">
 
-<!ENTITY Ctr_tabthrobber	"Προεπιλεγμένο εικονίδιο φόρτωσης">
+<!ENTITY Ctr_tabthrobber	"Εικονίδιο φόρτωσης">
 <!ENTITY Ctr_bmanimation	"Κινησιομοίωση προσθήκης σελιδοδείκτη">
 <!ENTITY Ctr_pananimation	"Κινησιομοίωση ανοίγματος μενού πίνακα">
 <!ENTITY Ctr_tabanimation	"Κινησιομοίωση κλεισίματος/ανοίγματος καρτέλας">
