--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Apariencia predeterminada">
 <!ENTITY Ctr_altoptionsp	"Apariencia alternativa">
 <!ENTITY Ctr_altoptionsw	"Abrir página de opciones en una ventana">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"Ancho:">
 <!ENTITY Ctr_altoptionswh	"Alto:">
 <!ENTITY Ctr_altoptionsi	"La ventana simulada de opciones ya no es un cuadro de diálogo sino una 'ventana de navegador' con todas las barras de herramientas ocultas. La característica 'Usar página actual' como página de inicio sólo añade URLs de páginas abiertas en la ventana actual, que en este caso sólo es 'about:preferences'. El botón de barra de herramientas 'Opciones' se sustituye por uno nuevo para poder abrir las opciones en una ventana.">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Reducir altura">
 <!ENTITY Ctr_addonbarfs		"En modo pantalla completa">
 
-<!ENTITY Ctr_tabthrobber	"Imagen predeterminada durante la carga">
+<!ENTITY Ctr_tabthrobber	"Imagen durante la carga">
 <!ENTITY Ctr_bmanimation	"Animación: Al añadir nuevos marcadores">
 <!ENTITY Ctr_pananimation	"Animación: De la apertura de menús de panel">
 <!ENTITY Ctr_tabanimation	"Animación: De la apertura/cierre de pestañas">
