--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Vaikimisi välimus">
 <!ENTITY Ctr_altoptionsp	"Alternatiivne välimus">
 <!ENTITY Ctr_altoptionsw	"Ava sätete leht aknas">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"Laius">
 <!ENTITY Ctr_altoptionswh	"Kõrgus">
 <!ENTITY Ctr_altoptionsi	"Simuleeritud sätete aken ei ole enam dialoogiaken, vaid peidetud tööriistaribadega 'brauseri aken'. Säte 'Kasuta aktiivset veebilehte' lisab avalehtede hulka ainult aktiivses aknas avatud lehtede aadressid, mis on antud juhul ainult 'about:preferences'. Sätete nupp tööriistaribal asendatakse uuega, et sätteid saaks aknas avada.">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Vähenda kõrgust">
 <!ENTITY Ctr_addonbarfs		"Täisekraani režiimis">
 
-<!ENTITY Ctr_tabthrobber	"Vaikimisi laadimise kujutis">
+<!ENTITY Ctr_tabthrobber	"Laadimise kujutis">
 <!ENTITY Ctr_bmanimation	"Järjehoidjatega töötamise animatsioon">
 <!ENTITY Ctr_pananimation	"Paneeli avamise animatsioon">
 <!ENTITY Ctr_tabanimation	"Kaardi sulgemise/avamise animatsioon">
