--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Apparence par défaut">
 <!ENTITY Ctr_altoptionsp	"Apparence alternative">
 <!ENTITY Ctr_altoptionsw	"Ouvrir dans une fenêtre">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"Largeur :">
 <!ENTITY Ctr_altoptionswh	"Hauteur :">
 <!ENTITY Ctr_altoptionsi	"La fenêtre simulée des options n'est plus une boite de dialogue mais une fenêtre du navigateur avec toutes les barres d'outils masquées. La fonctionnalité « Utiliser la page actuelle » ajoute seulement les URL des pages ouvertes dans la fenêtre actuelle, qui est uniquement « about:preferences » dans ce cas. Le bouton de barre d'outils « Options » est remplacé par un nouveau afin de pouvoir ouvrir les options dans une fenêtre.">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Réduire la hauteur">
 <!ENTITY Ctr_addonbarfs		"Afficher également en mode « Plein écran »">
 
-<!ENTITY Ctr_tabthrobber	"Image de chargement par défaut">
+<!ENTITY Ctr_tabthrobber	"Image de chargement">
 <!ENTITY Ctr_bmanimation	"Animation du bouton étoile lors de l'ajout d'un nouveau marque-page">
 <!ENTITY Ctr_pananimation	"Animation d'ouverture des panneaux">
 <!ENTITY Ctr_tabanimation	"Animation d'ouverture et de fermeture des onglets">
