--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Standardny zwonkowny napohlad">
 <!ENTITY Ctr_altoptionsp	"Alternatiwny zwonkowny napohlad">
 <!ENTITY Ctr_altoptionsw	"Strona nastajenjow we woknje wočinić">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"Šěrokosć">
 <!ENTITY Ctr_altoptionswh	"Wysokosć">
 <!ENTITY Ctr_altoptionsi	"Simulowane wokno nastajenjow dialog hižo njeje, ale 'wobhladowakowe wokno', hdźež wšě symbolowe lajsty su schowane. Funkcija 'Aktualnu stronu wužiwać' přidawa jenož URL stronow, kotrež so w aktualnym woknje wočinjeja, kotrež je w tutym padźe jenož 'about:preferences'. 'Tłóčatko symboloweje lajsty Nastajenja' so přez nowe wuměnja, zo bychu so nastajenja we woknje wočinili.">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Wysokosć pomjeńšić">
 <!ENTITY Ctr_addonbarfs		"W modusu połneje wobrazowki">
 
-<!ENTITY Ctr_tabthrobber	"Standardny začitowanski wobraz">
+<!ENTITY Ctr_tabthrobber	"Začitowanski wobraz">
 <!ENTITY Ctr_bmanimation	"Animacija za 'Zapołožku přidać'">
 <!ENTITY Ctr_pananimation	"Animacija za wočinjenje pola">
 <!ENTITY Ctr_tabanimation	"Animacija za začinjenje/wočinjenje rajtarka">
