--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Aspetto predefinito">
 <!ENTITY Ctr_altoptionsp	"Aspetto alternativo">
 <!ENTITY Ctr_altoptionsw	"Aprire la pagina Opzioni in una finestra">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"Larghezza">
 <!ENTITY Ctr_altoptionswh	"Altezza">
 <!ENTITY Ctr_altoptionsi	"La finestra delle opzioni non si presenta più come un dialogo ma come una finestra del browser con tutte le barre degli strumenti nascoste. La caratteristica 'Usa la pagina corrente' aggiunge gli url delle pagine aperte nella finestra corrente, che in questo caso è solo 'about:preferences'. Il pulsante delle 'opzioni' è sostituito da uno nuovo che è in grado di aprire le opzioni in una finestra.">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Diminuisci l'altezza">
 <!ENTITY Ctr_addonbarfs		"In modalità tutto schermo">
 
-<!ENTITY Ctr_tabthrobber	"Immagine di caricamento predefinita">
+<!ENTITY Ctr_tabthrobber	"Immagine di caricamento">
 <!ENTITY Ctr_bmanimation	"Icona animata all’aggiunta di un segnalibro">
 <!ENTITY Ctr_pananimation	"Icona animata all’apertura di un pannello">
 <!ENTITY Ctr_tabanimation	"Icona animata all’apertura o alla chiusura di una scheda">
