--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Domyślny wygląd">
 <!ENTITY Ctr_altoptionsp	"Alternatywny wygląd">
 <!ENTITY Ctr_altoptionsw	"Otwieraj stronę ustawień w oknie">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"Szerokość">
 <!ENTITY Ctr_altoptionswh	"Wysokość">
 <!ENTITY Ctr_altoptionsi	"Symulowane okno opcji nie jest już oknem dialogowym, ale 'oknem przeglądarki' z ukrytymi wszystkimi paskami narzędzi. Funkcja 'Użyj bieżących stron' dodaje tylko adresy stron otwartych w bieżącym oknie, w tym przypadku tylko 'about:preferences'. 'Przycisk opcji paska narzędzi' zostaje zastąpiony nowym, aby mógł otwierać opcje w oknie.">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Zmniejsz wysokość">
 <!ENTITY Ctr_addonbarfs		"W trybie pełnoekranowym">
 
-<!ENTITY Ctr_tabthrobber	"Domyślny obraz ładowania">
+<!ENTITY Ctr_tabthrobber	"Obraz ładowania">
 <!ENTITY Ctr_bmanimation	"Animacja dodawania zakładki">
 <!ENTITY Ctr_pananimation	"Animacja otwierania panelu">
 <!ENTITY Ctr_tabanimation	"Animacja otwierania i zamykania karty">
