--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Aparência padrão">
 <!ENTITY Ctr_altoptionsp	"Aparência alternativa">
 <!ENTITY Ctr_altoptionsw	"Abrir página de opções em uma janela">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"Largura">
 <!ENTITY Ctr_altoptionswh	"Altura">
 <!ENTITY Ctr_altoptionsi	"A janela de opções simulada não é mais um diálogo, mas uma 'janela do navegador' com todas as barras de ferramentas ocultadas. O recurso 'Usar página atual' somente adicionas URLs de páginas abertas na janela atual, que é somente 'about:preferences' neste caso. O botão 'Opções' na barra de ferramentas foi substituída por uma nova para ser possível abrir as opções em uma janela.">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Diminuir altura">
 <!ENTITY Ctr_addonbarfs		"No modo de tela cheia">
 
-<!ENTITY Ctr_tabthrobber	"Imagem de carregamento padrão">
+<!ENTITY Ctr_tabthrobber	"Imagem de carregamento">
 <!ENTITY Ctr_bmanimation	"Usar animação ao usar os favoritos">
 <!ENTITY Ctr_pananimation	"Usar animação ao abrir o painel">
 <!ENTITY Ctr_tabanimation	"Usar animação ao fechar/abrir a aba">
