--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Privzeti videz">
 <!ENTITY Ctr_altoptionsp	"Nadomestni videz">
 <!ENTITY Ctr_altoptionsw	"Odpri stran z možnostmi v oknu">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"Širina">
 <!ENTITY Ctr_altoptionswh	"Višina">
 <!ENTITY Ctr_altoptionsi	"Simulirano okno možnosti ni več pogovorno okno, ampak 'okno brskalnika' s skritimi orodnimi vrsticami. Značilnost 'Uporabi trenutno stran' samo doda v trenutnem oknu odprte URL-je strani, ki je v tem primeru samo 'about:preferences'. Gumb orodne vrstice 'možnosti' se nadomesti z novim, da se lahko možnosti odprejo v oknu.">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Zmanjšaj višino">
 <!ENTITY Ctr_addonbarfs		"V celozaslonskem načinu">
 
-<!ENTITY Ctr_tabthrobber	"Privzeta slika nalaganja">
+<!ENTITY Ctr_tabthrobber	"Slika nalaganja">
 <!ENTITY Ctr_bmanimation	"Animacija dodajanja med zaznamke">
 <!ENTITY Ctr_pananimation	"Animacija odpiranja podokna">
 <!ENTITY Ctr_tabanimation	"Animacija zapiranja/odpiranja zavihkov">
