--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Типовий вигляд">
 <!ENTITY Ctr_altoptionsp	"Альтернативний вигляд">
 <!ENTITY Ctr_altoptionsw	"Відкрити сторінку налаштувань у новому вікні">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"Ширина">
 <!ENTITY Ctr_altoptionswh	"Висота">
 <!ENTITY Ctr_altoptionsi	"Вікно змодельованих параметрів не є більше діалогом, але «вікно браузера» з усіма панелями інструментів приховані. Функція «Використовувати поточну сторінку» тільки додає URL-адреси сторінок, відкритих в поточному вікні, які є тільки «about:preferences» в цьому випадку. Кнопка «Параметри» панелі інструментів замінюється на нову, щоб бути в змозі відкрити параметри у вікні.">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"Зменшити висоту">
 <!ENTITY Ctr_addonbarfs		"У повноекранному режимі">
 
-<!ENTITY Ctr_tabthrobber	"Типове зображення завантаження">
+<!ENTITY Ctr_tabthrobber	"Зображення завантаження">
 <!ENTITY Ctr_bmanimation	"Анімація створення закладок">
 <!ENTITY Ctr_pananimation	"Анімація відкривання панелі">
 <!ENTITY Ctr_tabanimation	"Анімація відкривання/закривання вкладок">
