--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"默认外观">
 <!ENTITY Ctr_altoptionsp	"备选的外观">
 <!ENTITY Ctr_altoptionsw	"在窗口中打开选项页面">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"宽度">
 <!ENTITY Ctr_altoptionswh	"高度">
 <!ENTITY Ctr_altoptionsi	"模拟的选项窗口再也不是一个对话框，而是一个隐藏所有工具栏的“浏览器窗口”。“使用当前页面”功能仅添加在已在当前窗口打开的页面地址，在这种情况下只是“about:preferences”选项。 “选项”工具栏图标被替换为新的，以便于在窗口中打开选项。">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"减少高度">
 <!ENTITY Ctr_addonbarfs		"在全屏模式">
 
-<!ENTITY Ctr_tabthrobber	"默认正在加载图片">
+<!ENTITY Ctr_tabthrobber	"Loading image">
 <!ENTITY Ctr_bmanimation	"加入书签动画">
 <!ENTITY Ctr_pananimation	"打开面板动画">
 <!ENTITY Ctr_tabanimation	"打开/关闭标签页动画">
