--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -124,6 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"預設外觀">
 <!ENTITY Ctr_altoptionsp	"換個外觀">
 <!ENTITY Ctr_altoptionsw	"用傳統式的彈出新視窗來開啟選項頁">
+<!ENTITY Ctr_altoptions_hm	"horizontal menu">
+<!ENTITY Ctr_altoptions_vm	"vertical menu">
 <!ENTITY Ctr_altoptionsww	"寬度">
 <!ENTITY Ctr_altoptionswh	"高度">
 <!ENTITY Ctr_altoptionsi	"本套件模擬選項視窗將會是一個隱藏所有工具列的「瀏覽器視窗」。 若你在 [選項視窗]/[一般]/[首頁] 的設定頁內按下「使用目前頁面」按鈕，會將首頁網址設定變更為「about:preferences」，而非主瀏覽視窗的所有分頁。本套件會新增一個工具列按鈕，名為「選項(視窗)」，若你是第一次開啟本設定的話，可以在介面自訂模式中找到該按鈕。">
@@ -356,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"減少高度">
 <!ENTITY Ctr_addonbarfs		"全螢幕模式下懸停顯示">
 
-<!ENTITY Ctr_tabthrobber	"預設分頁載入圖示動畫 (進度指示器)">
+<!ENTITY Ctr_tabthrobber	"進度指示器">
 <!ENTITY Ctr_bmanimation	"書籤加入的動畫">
 <!ENTITY Ctr_pananimation	"面板開啟的動畫">
 <!ENTITY Ctr_tabanimation	"分頁關閉/開啟的動畫">
