--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -124,8 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Vaikimisi välimus">
 <!ENTITY Ctr_altoptionsp	"Alternatiivne välimus">
 <!ENTITY Ctr_altoptionsw	"Ava sätete leht aknas">
-<!ENTITY Ctr_altoptions_hm	"horizontal menu">
-<!ENTITY Ctr_altoptions_vm	"vertical menu">
+<!ENTITY Ctr_altoptions_hm	"horisontaalne menüü">
+<!ENTITY Ctr_altoptions_vm	"vertikaalne menüü">
 <!ENTITY Ctr_altoptionsww	"Laius">
 <!ENTITY Ctr_altoptionswh	"Kõrgus">
 <!ENTITY Ctr_altoptionsi	"Simuleeritud sätete aken ei ole enam dialoogiaken, vaid peidetud tööriistaribadega 'brauseri aken'. Säte 'Kasuta aktiivset veebilehte' lisab avalehtede hulka ainult aktiivses aknas avatud lehtede aadressid, mis on antud juhul ainult 'about:preferences'. Sätete nupp tööriistaribal asendatakse uuega, et sätteid saaks aknas avada.">
@@ -280,7 +280,7 @@
 <!ENTITY Ctr_padlock_mod	"kaasaegne">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;i' ikoon kehtivate 'about'-lehtede jaoks">
 <!ENTITY Ctr_icopageinfo	"Lehe/gloobuse/'i'-ikoon: nendel klõpsamine avab akna 'veebilehe teave'">
-<!ENTITY Ctr_lbsbsize		"Custom width">
+<!ENTITY Ctr_lbsbsize		"Kohandatud laius">
 <!ENTITY Ctr_searchbar		"Otsinguriba">
 <!ENTITY Ctr_autocomplete	"Automaatlõpetamise hüpik">
 <!ENTITY Ctr_altautocompl	"Alternatiivne välimus">
@@ -294,7 +294,7 @@
 <!ENTITY Ctr_lbsugresi		"Keela kõrguse piirang">
 <!ENTITY Ctr_cresultshcb	"Kõrguse kohandatud piirang: ">
 <!ENTITY Ctr_lbsugres		"Tulemuste arv">
-<!ENTITY Ctr_lbsbradius		"Custom border roundness">
+<!ENTITY Ctr_lbsbradius		"Piirjoonte kohandatud ümarus">
 
 <!ENTITY Ctr_menubar_items	"Menüükirjete asukoht">
 <!ENTITY Ctr_extrabar		"Lisa-tööriistaribad">
@@ -381,12 +381,12 @@
 <!ENTITY Ctr_fx38pocket2	"Märkus: Enne selle eelistuse keelamist 'Pocket'-nupu 'kohandamise aknasse' liigutamine eemaldab järjehoidjate ja lugemisnimekirja menüüdest ka kõik funktsiooniga 'Pocket' seotud kirjed.">
 <!ENTITY Ctr_e_loop			"Hello / Helistamine ja vestlus / Loop">
 <!ENTITY Ctr_e_readermode	"Lugemisvaade">
-<!ENTITY Ctr_e_geolocation	"Geolocation">
+<!ENTITY Ctr_e_geolocation	"Asukohatuvastus">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Heli esitamise ikoon kaartidel">
 <!ENTITY Ctr_e_containertab	"Konteinerkaardid">
-<!ENTITY Ctr_e_findbarhl	"Otsinguribal esiletõstmine">
-<!ENTITY Ctr_fx50findbarhl	"Nendelt eelistustelt märke eemaldamine keelab otsinguribal esiletõstmise võimalused.">
+<!ENTITY Ctr_e_findbarhl	"Leidmisribal esiletõstmine">
+<!ENTITY Ctr_fx50findbarhl	"Nendelt eelistustelt märke eemaldamine keelab leidmisribal esiletõstmise võimalused.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
 
 
