--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -124,8 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Domyślny wygląd">
 <!ENTITY Ctr_altoptionsp	"Alternatywny wygląd">
 <!ENTITY Ctr_altoptionsw	"Otwieraj stronę ustawień w oknie">
-<!ENTITY Ctr_altoptions_hm	"horizontal menu">
-<!ENTITY Ctr_altoptions_vm	"vertical menu">
+<!ENTITY Ctr_altoptions_hm	"menu poziome">
+<!ENTITY Ctr_altoptions_vm	"menu pionowe">
 <!ENTITY Ctr_altoptionsww	"Szerokość">
 <!ENTITY Ctr_altoptionswh	"Wysokość">
 <!ENTITY Ctr_altoptionsi	"Symulowane okno opcji nie jest już oknem dialogowym, ale 'oknem przeglądarki' z ukrytymi wszystkimi paskami narzędzi. Funkcja 'Użyj bieżących stron' dodaje tylko adresy stron otwartych w bieżącym oknie, w tym przypadku tylko 'about:preferences'. 'Przycisk opcji paska narzędzi' zostaje zastąpiony nowym, aby mógł otwierać opcje w oknie.">
@@ -383,7 +383,7 @@
 <!ENTITY Ctr_e_readermode	"Popraw czytelność">
 <!ENTITY Ctr_e_geolocation	"Geolokalizacja">
 <!ENTITY Ctr_e_pocket		"Pocket">
-<!ENTITY Ctr_e_tabsaudioico	"Ikona odtwarzania dźwięku na kartach">
+<!ENTITY Ctr_e_tabsaudioico	"Ikona odtwarzania dźwięku">
 <!ENTITY Ctr_e_containertab	"Karty z kontekstem">
 <!ENTITY Ctr_e_findbarhl	"Podświetlanie paska wyszukiwania">
 <!ENTITY Ctr_fx50findbarhl	"Odznaczenie tych ustawień usuwa funkcje 'podświetlania' paska wyszukiwania.">
