--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -124,8 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"デフォルトの外観">
 <!ENTITY Ctr_altoptionsp	"替わりの外観で置き換える">
 <!ENTITY Ctr_altoptionsw	"オプションページをウィンドウで表示">
-<!ENTITY Ctr_altoptions_hm	"horizontal menu">
-<!ENTITY Ctr_altoptions_vm	"vertical menu">
+<!ENTITY Ctr_altoptions_hm	"横メニュー">
+<!ENTITY Ctr_altoptions_vm	"縦メニュー">
 <!ENTITY Ctr_altoptionsww	"幅:">
 <!ENTITY Ctr_altoptionswh	"高さ:">
 <!ENTITY Ctr_altoptionsi	"オプションウィンドウは、すべてのツールバーが隠されたブラウザウィンドウであり、ダイアログではありません。このウィンドウを開いて「現在のページを使用」機能を使用すると、オプションウィンドウの URL(about:preferences) が追加されます。オプションツールバーボタンは、オプションウィンドウを開けるように新しいものに置き換えられます。">
@@ -358,7 +358,7 @@
 <!ENTITY Ctr_lessaddonsbar	"高さを減らす">
 <!ENTITY Ctr_addonbarfs		"フルスクリーンモード中も表示する">
 
-<!ENTITY Ctr_tabthrobber	"Loading image">
+<!ENTITY Ctr_tabthrobber	"ローディングイメージ">
 <!ENTITY Ctr_bmanimation	"ブックマークする時にアニメーションする">
 <!ENTITY Ctr_pananimation	"パネルを開く時にアニメーションする">
 <!ENTITY Ctr_tabanimation	"タブを閉じる/開く時にアニメーションする">
@@ -381,7 +381,7 @@
 <!ENTITY Ctr_fx38pocket2	"注：ブックマークメニューとリーダーメニューのポップアップからすべての Pocket 関連のエントリを削除する前に、カスタマイズモードで「その他のツールと機能」領域に Pocket ボタンを移動してください。">
 <!ENTITY Ctr_e_loop			"&brandShortName; Hello">
 <!ENTITY Ctr_e_readermode	"リーダーモード">
-<!ENTITY Ctr_e_geolocation	"Geolocation">
+<!ENTITY Ctr_e_geolocation	"位置情報">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"タブのサウンド再生アイコン">
 <!ENTITY Ctr_e_containertab	"コンテナタブ">
