--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -47,7 +47,7 @@
 <!ENTITY Ctr_tabsontopI1	"Добавляет атрибут [tabsontop=true/false] для">
 <!ENTITY Ctr_tabsintitlebar	"Использовать заголовок &brandShortName; вместо заголовка ОС">
 <!ENTITY Ctr_tabwidthdef	"(по умолчанию)">
-<!ENTITY Ctr_tabwidthcla	"(классич.)">
+<!ENTITY Ctr_tabwidthcla	"(классическая)">
 <!ENTITY Ctr_tabminheight	"Высота:">
 <!ENTITY Ctr_tabheightinfo	"Низкое значение вызовет сбои в развёрнутом режиме!">
 <!ENTITY Ctr_ctrltabprev	"Использовать предпросмотр вкладок 'Ctrl + Tab'">
@@ -124,8 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Вид по умолчанию">
 <!ENTITY Ctr_altoptionsp	"Альтернативный вид">
 <!ENTITY Ctr_altoptionsw	"Открывать страницу «Настройки» в окне">
-<!ENTITY Ctr_altoptions_hm	"horizontal menu">
-<!ENTITY Ctr_altoptions_vm	"vertical menu">
+<!ENTITY Ctr_altoptions_hm	"горизонтальное меню">
+<!ENTITY Ctr_altoptions_vm	"вертикальное меню">
 <!ENTITY Ctr_altoptionsww	"Ширина">
 <!ENTITY Ctr_altoptionswh	"Высота">
 <!ENTITY Ctr_altoptionsi	"Окно настроек больше не является диалогом, теперь это «Окно браузера», в котором скрыты все панели инструментов. Опция «Использовать текущие страницы» добавляет только URL-адреса открытые в текущем окне, в данном случае 'about:preferences'. Кнопка «Настройки» на панели инструментов заменяется на новую, чтобы позволить открывать параметры в окне.">
@@ -221,7 +221,7 @@
 <!ENTITY Ctr_tabmokcolor4	"Белый цвет для пустой пунктирной иконки сайта на вкладке">
 
 <!ENTITY Ctr_navthrobber1	"Нажав на индикатор активности открывается указанный адрес:">
-<!ENTITY Ctr_navthrobber2	"Добавьте адрес или оставьте пустым">
+<!ENTITY Ctr_navthrobber2	"Укажите адрес или оставьте пустым">
 <!ENTITY Ctr_anewtaburl		"Адрес страницы новой вкладки">
 <!ENTITY Ctr_anewtaburlcb	"Изменить адрес страницы новой вкладки (по умолчанию: 'about:newtab')">
 <!ENTITY Ctr_anewtaburlpcb	"Изменить адрес страницы приватного окна (по умолчанию: 'about:privatebrowsing')">
