--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -16,7 +16,7 @@
 <!ENTITY Ctr_rr				"Перезапустіть &brandShortName;!">
 <!ENTITY Ctr_window			"вікно">
 <!ENTITY Ctr_centered		"По центру">
-<!ENTITY Ctr_page			"Page">
+<!ENTITY Ctr_page			"Сторінка">
 
 <!ENTITY Ctr_cuibuttons		"Кнопки">
 <!ENTITY Ctr_cuibutnormal	"Нормальні">
@@ -124,8 +124,8 @@
 <!ENTITY Ctr_altoptionsd	"Типовий вигляд">
 <!ENTITY Ctr_altoptionsp	"Альтернативний вигляд">
 <!ENTITY Ctr_altoptionsw	"Відкрити сторінку налаштувань у новому вікні">
-<!ENTITY Ctr_altoptions_hm	"horizontal menu">
-<!ENTITY Ctr_altoptions_vm	"vertical menu">
+<!ENTITY Ctr_altoptions_hm	"горизонтальне меню">
+<!ENTITY Ctr_altoptions_vm	"вертикальне меню">
 <!ENTITY Ctr_altoptionsww	"Ширина">
 <!ENTITY Ctr_altoptionswh	"Висота">
 <!ENTITY Ctr_altoptionsi	"Вікно змодельованих параметрів не є більше діалогом, але «вікно браузера» з усіма панелями інструментів приховані. Функція «Використовувати поточну сторінку» тільки додає URL-адреси сторінок, відкритих в поточному вікні, які є тільки «about:preferences» в цьому випадку. Кнопка «Параметри» панелі інструментів замінюється на нову, щоб бути в змозі відкрити параметри у вікні.">
@@ -285,7 +285,7 @@
 <!ENTITY Ctr_autocomplete	"Спливаюче вікно автозаповнення">
 <!ENTITY Ctr_altautocompl	"Альтернативний вигляд">
 <!ENTITY Ctr_autocompl_it	"Усунути пункти «Шукати з...» та «Відвідати» (якщо присутні)">
-<!ENTITY Ctr_acompl_search	"Show search engines">
+<!ENTITY Ctr_acompl_search	"Показати пошукові рушії">
 <!ENTITY Ctr_autocompl_hl	"Виділення текстових результатів">
 <!ENTITY Ctr_autocompl_rhl	"Кольори Aero для виділених результатів">
 <!ENTITY Ctr_autocompl_not	"Приховати заголовок сторінки">
@@ -381,7 +381,7 @@
 <!ENTITY Ctr_fx38pocket2	"Примітка: Переміщення кнопки «Кишеня» на сторінку «Пристосувати &brandShortName;» перед вимкненням цього налаштування також усуває написи «Кишеня» в закладках і меню читання.">
 <!ENTITY Ctr_e_loop			"Виклик та сеанс зв’язку">
 <!ENTITY Ctr_e_readermode	"Режим читання">
-<!ENTITY Ctr_e_geolocation	"Geolocation">
+<!ENTITY Ctr_e_geolocation	"Геолокація">
 <!ENTITY Ctr_e_pocket		"Кишеня">
 <!ENTITY Ctr_e_tabsaudioico	"Іконка аудіовідтворення на вкладках">
 <!ENTITY Ctr_e_containertab	"Контейнерні вкладки">
