--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -58,6 +58,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Værdier under 48 px vil for det meste give fejl i grafikken!">
 <!ENTITY Ctr_square_edges	"Firkantede øverste hjørner">
 <!ENTITY Ctr_tttitlebar		"Fanebladstitel i &brandShortName;-titellinje">
+<!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
 <!ENTITY Ctr_tabinsertion	"Indsæt relaterede faneblad efter aktive faneblad">
 <!ENTITY Ctr_emptytfavico	"Vis favicon (hvis stedet ikke tilbyder et)">
 <!ENTITY Ctr_emptytfavico_n	"Intet">
