--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -58,6 +58,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Values below 48 px will cause glitches in most cases!">
 <!ENTITY Ctr_square_edges	"Squared top corners">
 <!ENTITY Ctr_tttitlebar		"Tab title in &brandShortName; titlebar">
+<!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
 <!ENTITY Ctr_tabinsertion	"Insert related tab after current tab">
 <!ENTITY Ctr_emptytfavico	"Show favicon (if a site does not offer one)">
 <!ENTITY Ctr_emptytfavico_n	"None">
