--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -58,6 +58,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Valores abaixo de 48px causarão falhas na maioria dos casos!">
 <!ENTITY Ctr_square_edges	"Cantos superiores quadrados">
 <!ENTITY Ctr_tttitlebar		"Título da aba na barra de título &brandShortName;">
+<!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
 <!ENTITY Ctr_tabinsertion	"Inserir a aba relacionada depois da aba atual">
 <!ENTITY Ctr_emptytfavico	"Exibir favicon (se o site não oferecer um)">
 <!ENTITY Ctr_emptytfavico_n	"Nenhum">
