--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -58,6 +58,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"小于48px的值在多数情况下可能出现问题!">
 <!ENTITY Ctr_square_edges	"方形顶部边角">
 <!ENTITY Ctr_tttitlebar		"在 &brandShortName; 标题栏显示标签页标题">
+<!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
 <!ENTITY Ctr_tabinsertion	"在当前标签页后插入关联标签页">
 <!ENTITY Ctr_emptytfavico	"显示网站图标 (如果网站未提供)">
 <!ENTITY Ctr_emptytfavico_n	"无">
